istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: calculator-gateway
  namespace: calculator
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: calculator-api
  namespace: calculator
spec:
  hosts:
  - "*"
  gateways:
  - calculator-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: calculator-api
        port:
          number: 8000
